add data entry webpage

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <head>
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=NTR" />
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
+  <script src="js/require.js"></script>
+  <script src="js/dev-main.js"></script>
 
 
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
-  <div id="image">
+  <div class="grid">
+		
+		<div id="website"></div>
+		
+		
+	
   </div>
-  <div id="title">
-  </div>
-  <div id="description">
-  </div>
-  <div id="dot-button">
-  </div>
+  
+ 
+
 	
  <script src="js/dev-game.js"></script>
  
